--- a/TODO
+++ b/TODO
@@ -8,5 +8,6 @@
 3. need review:
     1. 031
     2. 043
+    3. 060: lowest sum
 
 4. ant file to help build java src and reorganize the code hiereachy
