solve PE094 using pell equation

--- a/TODO
+++ b/TODO
@@ -3,9 +3,9 @@
     02. 079: not a perfect solution
     03. 084
     04. 088
-    05. 094
+    05. 094(DONE)
     06. 096
-    07. 100
+    07. 100(DONE)
 
 2. run time exceeds 1m:
     070, 075, 098
